--- a/metafenliu.ini
+++ b/metafenliu.ini
@@ -54,6 +54,8 @@ ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
 ruleset=DIRECT,[]GEOSITE,category-public-tracker
 ;------------请在下方区域内添加应用---------------
 ; --- 核心应用 ---
+ruleset=🧠 GROK,[]GEOSITE,grok
+ruleset=📦 GROK,[]GEOIP,grok,no-resolve
 ruleset=📦 Notion,[]GEOSITE,Notion
 ruleset=📦 Notion,[]GEOIP,Notion,no-resolve
 ruleset=📨 Telegram,[]GEOSITE,telegram
@@ -115,6 +117,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;    说明：每个应用都加入「🧊 冷门节点」可选
 ; ==========================================================
 ;------------请在下方区域内添加应用---------------
+custom_proxy_group=📦 GROK`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
