--- a/metafenliu.ini
+++ b/metafenliu.ini
@@ -55,7 +55,7 @@ ruleset=DIRECT,[]GEOSITE,category-public-tracker
 ;------------请在下方区域内添加应用---------------
 ; --- 核心应用 ---
 ruleset=🧠 GROK,[]GEOSITE,grok
-ruleset=📦 GROK,[]GEOIP,grok,no-resolve
+ruleset=🧠 GROK,[]GEOIP,grok,no-resolve
 ruleset=📦 Notion,[]GEOSITE,Notion
 ruleset=📦 Notion,[]GEOIP,Notion,no-resolve
 ruleset=📨 Telegram,[]GEOSITE,telegram
